--- a/css/styles.css
+++ b/css/styles.css
@@ -82,24 +82,23 @@ p{
     line-height: 1.19;
     text-decoration: none;
     color: var(--text-logo);
+    
+    transition: text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.logo:hover,
+.logo:focus {
+    text-shadow: 1px 1px 2px var(--accent-color);
 }
 
 .logo-web {
     color: var(--accent-color);
 }
 
-.logo:hover,
-.logo:focus {
-    text-decoration: underline var(--accent-color);
-}
-
 .header-logo{
     margin-right: 93px;
 }
 
-.current{
-    color: var(--accent-color);
-}
 
 .page-nav,
 .header-field {
@@ -111,13 +110,17 @@ p{
 .page-nav-link {
     color:inherit;
     text-decoration: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-nav-link:hover,
 .page-nav-link:focus{
     color: var(--accent-color);
 }
-
+.current {
+    color: var(--accent-color);
+}
 .contact,
 .page-nav-link{
     padding-top: 32px;
@@ -137,24 +140,27 @@ display: flex;
     min-width: 142px;
     text-decoration: none;
     color: var(--text-color);
-}
-.header-contact-item svg{
-margin-right: 10px;
-fill: currentColor;
-}
 
-.header-icon-mail{
-width: 16px;
-height: 12px;
-}
-.header-icon-tel{
-width: 10px;
-height: 16px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact:hover,
 .contact:focus{
     color: var(--accent-color);
+}
+.header-contact-item svg {
+    margin-right: 10px;
+    fill: currentColor;
+}
+
+.header-icon-mail {
+    width: 16px;
+    height: 12px;
+}
+
+.header-icon-tel {
+    width: 10px;
+    height: 16px;
 }
 .header-contact-item+.header-contact-item,
 .page-nav-item+.page-nav-item {
@@ -179,7 +185,10 @@ text-align: center;
 }
 
 .hero-title{
+    width: 696px;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
     font-weight: 900;
     font-size: 44px;
@@ -205,6 +214,8 @@ text-align: center;
     color: var(--white-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
+
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -313,15 +324,15 @@ padding: 30px;
     align-items: center;
     justify-content: center;
     color: var(--color-costomer);
+    border-radius: 44px;
+    background-color: transparent;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon {
-    width: 20px;
-    height: 20px;
-    fill: currentColor;
-}
 .footer-socials .social-link {
-    border-radius: 44px;
+    color: var(--white-color);
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -329,8 +340,14 @@ padding: 30px;
 .social-link:focus{
 color:var(--white-color);
 background-color: var(--accent-color);
-border-radius: 44px;
 }
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+}
+
 
 /* costomers */
 
@@ -350,17 +367,20 @@ gap: 30px;
     border: 1px solid var(--color-costomer);
     border-radius: 4px;
     color: var(--color-costomer);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.costomers-icon {
-    width: 106px;
-    height: 60px;
-    fill: currentColor;
-}
 .costomers-link:hover,
 .costomers-link:focus{
     color:var(--accent-color);
     border-color: var(--accent-color);
+}
+.costomers-icon {
+    width: 106px;
+    height: 60px;
+    fill: currentColor;
 }
 /* Main page Portfolio */
 .filter{
@@ -381,6 +401,10 @@ gap: 30px;
     letter-spacing: 0.03em;
     cursor: pointer;
     border: none;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-item + .filter-item {
 margin-left: 8px;
@@ -402,20 +426,23 @@ margin-left: 8px;
     justify-content: flex-start;
     max-width: 370px;
     margin: 15px;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-item:hover,
+.portfolio-item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-img,
 .team-img {
     display: block;
 }
 
-.portfolio-link{
+.portfolio-link {
     text-decoration: none;
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 .portfolio-field-text {
     display: block;
     padding: 20px 24px;
@@ -456,27 +483,31 @@ margin-left: 8px;
     font-style: normal;
     line-height:1.71;
     text-decoration: none;
-}
-.logo-footer{
-    display: block;
-    margin-bottom: 20px;
-}
-.address-item + .address-item{
-    margin-top: 9px;
-}
-.logo-footer,
-.map-link {
-    color:var(--white-color);
-}
 
-.link-mail,
-.link-phone{
-    color:var(--color-transparency);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address:hover,
 .address:focus{
     color: var(--accent-color);
+}
+.logo-footer {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.address-item+.address-item {
+    margin-top: 9px;
+}
+
+.logo-footer,
+.map-link {
+    color: var(--white-color);
+}
+
+.link-mail,
+.link-phone {
+    color: var(--color-transparency);
 }
 .footer-socials{
     margin-left: 70px;
