--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,9 @@ p{
     padding-bottom: 94px;
     text-align: center;
 }
-
+.section:nth-child(1){
+    box-shadow: 0px -1px 0px 0px var(--color-header-bottom);
+}
 .section:nth-child(2n+4) {
     background-color: var(--color-section);
 }
@@ -71,10 +73,6 @@ p{
  
 /* header */
 
-.header {
-    border-bottom: 1px solid var(--color-header-bottom);
-}
-
 .logo {
     font-family: Raleway, sans-serif;
     font-weight: 700;
@@ -82,14 +80,9 @@ p{
     line-height: 1.19;
     text-decoration: none;
     color: var(--text-logo);
-    
-    transition: text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo:hover,
-.logo:focus {
-    text-shadow: 1px 1px 2px var(--accent-color);
-}
+
 
 .logo-web {
     color: var(--accent-color);
@@ -108,19 +101,33 @@ p{
 }
 
 .page-nav-link {
+    padding-bottom: 32px;
     color:inherit;
     text-decoration: none;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.page-nav-link:hover,
+.page-nav-link.page-nav-link:hover, 
 .page-nav-link:focus{
     color: var(--accent-color);
 }
 .current {
+    position: relative;
     color: var(--accent-color);
 }
+.current::after {
+    content:"";
+    position: absolute;
+    bottom: 0;
+display: block;
+width: 100%;
+height: 4px;
+
+border-radius: 2px;
+background-color: var(--accent-color);
+}
+
 .contact,
 .page-nav-link{
     padding-top: 32px;
@@ -223,6 +230,64 @@ text-align: center;
     background-color: var(--color-activ-btn);
 }
 
+/* Modal */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+
+    /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    min-width: 528px;
+    min-height: 581px;
+    padding: 8px;
+
+    background-color: #fff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close {
+    position: absolute;
+    top:8px;
+    right: 8px;
+
+    padding: 5px;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    cursor: pointer;
+}
+.icon-close{
+    display: block;
+    width: 18px;
+    height: 18px;
+}
+
 /* Preference */
 
 .preference-list {
@@ -276,6 +341,28 @@ text-align: center;
 .gallery{
     display: flex;
     justify-content: space-between;
+}
+.gallery-item img{
+    display: block;
+}
+.gallery-item{
+position: relative;
+}
+
+.gallery-descr{
+    position: absolute;
+    bottom: 0;
+
+    width: 100%;
+    background-color:var(--color-gradient);
+}
+
+.gallery-text{
+    padding: 27px;
+
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--white-color);
 }
 
    /* Our team */
@@ -426,22 +513,56 @@ margin-left: 8px;
     justify-content: flex-start;
     max-width: 370px;
     margin: 15px;
+   
+}
 
+.portfolio-link {
+    
+    display: block;
+    text-decoration: none;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+
+.portfolio-thumb{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-link-actions{
+position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding:24px;
+    align-items: center;
+
+    font-size: 18px;
+    line-height: 1.56;
+    text-align: start;
+    color: var(--white-color);
+    background-color: rgba(33, 150, 243, 0.9);
+
+    transform: translateY(0%);
+    opacity: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-link:hover .portfolio-link-actions {
+    transform: translateY(-100%);
+    opacity: 1;
 }
 .portfolio-img,
 .team-img {
     display: block;
 }
 
-.portfolio-link {
-    text-decoration: none;
-}
+
 
 .portfolio-field-text {
     display: block;
