--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ gap:50px;
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
+    visibility:hidden;
 }
 
 .modal {
@@ -547,7 +548,7 @@ gap: 30px;
                 opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover .portfolio-link-actions {
+.portfolio-thumb:hover .portfolio-link-actions {
     transform: translateY(-100%);
     opacity: 1;
 }
