--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,7 @@ gap: 30px;
                 opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-thumb:hover .portfolio-link-actions {
+.portfolio-link:hover .portfolio-link-actions {
     transform: translateY(-100%);
     opacity: 1;
 }
