--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,8 @@ gap:50px;
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -249,11 +250,14 @@ gap:50px;
     visibility:hidden;
 }
 
+.backdrop.is-hidden .modal{
+transform: translate(-50%, -50%) scale(1.1)
+}
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
 
     max-width: 528px;
     max-height: 581px;
@@ -264,7 +268,8 @@ gap:50px;
     background-color: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    
+
+    transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
