--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ p{
     font-weight: 500;
     letter-spacing: 0.02em;
     align-items: center;
-    color: var(--text-color);
+    color:inherit;
     text-decoration: none;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -149,6 +149,7 @@ gap:50px;
 }
 
 .header-contact-item .page-nav-link{
+    color: var(--text-color);
     display: flex;
     min-width: 142px;
 }
@@ -280,6 +281,7 @@ transform: translate(-50%, -50%) scale(1.1)
 
     padding: 5px;
 
+    background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     cursor: pointer;
@@ -512,16 +514,18 @@ gap: 30px;
     gap:30px;
 }
 
-.portfolio-link {
+.portfolio-item {
     max-width: 370px;
-    text-decoration: none;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio-item:hover,
+.portfolio-item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-link{
+    text-decoration: none;
 }
 
 .portfolio-img {
@@ -553,7 +557,8 @@ gap: 30px;
                 opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover .portfolio-link-actions {
+.portfolio-link:hover .portfolio-link-actions,
+.portfolio-link:focus .portfolio-link-actions {
     transform: translateY(-100%);
     opacity: 1;
 }
