--- a/css/styles.css
+++ b/css/styles.css
@@ -516,16 +516,16 @@ gap: 30px;
 
 .portfolio-item {
     max-width: 370px;
-
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .portfolio-link{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    display: block;
     text-decoration: none;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-img {
